--- a/StudentSupport/templates/todo.html
+++ b/StudentSupport/templates/todo.html
@@ -26,7 +26,9 @@
     // TODO : make seperate pages for feedback for general department, mechanical department as well as applied mechanics department.
     // TODO : Make editable table as shown in manage department for prinicpal
     // TODO : Update all the icons accordingly use feather or icofont or font awesome.
-    // TODO :
+    // TODO : If anywhere mechanical department comes than give choice of choosing division.
+    // TODO : Internal Documentation like comments in all pages and every where.
+    // TODO : necessary mails should be sent to recepeitns
 
 </script>
 <!-- TODO : Change every back to dashboard from this. -->
