--- a/StudentSupport/templates/hod/Detailed_Feedback/detailed_feedback_end_sem.html
+++ b/StudentSupport/templates/hod/Detailed_Feedback/detailed_feedback_end_sem.html
@@ -95,6 +95,7 @@
                                     <option value="0">Odd</option>
                                     <option value="1">Even</option>
                                 </select>
+                                <div id="Error_term" style="color: red"></div>
                             </div>
 
                             <label class="col-sm-2 col-form-label" for="year" style="font-weight: 900;">Year : </label>
@@ -120,6 +121,7 @@
                                    <option value="{{ f.id }}">{{ f.name }}</option>
                                {% endfor %}
                                </select>
+                                <div id="Error_faculty" style="color: red"></div>
                             </div>
                             <label class="col-sm-2 col-form-label" for="subject" style="font-weight: 900;">Subject : </label>
                                 <div class="col-sm-4">
@@ -247,7 +249,7 @@
                                                         <div class="form-group row">
                                                             <label class="col-md-2 col-lg-2 col-form-label" for="view_feedback_faculty" style="font-weight: 900;">Select Faculty : </label>
                                                             <div class="col-md-4 col-lg-4">
-                                                                <select class="custom-select" id="view_feedback_faculty" name="view_feedback_faculty" style="width: 100%" onchange="update_subjects()">
+                                                                <select class="custom-select" id="view_feedback_faculty" name="view_feedback_faculty" style="width: 100%">
                                                                     <option value="-1" selected disabled>Select Faculty</option>
                                                                     {% for f in dept_faculties %}
                                                                         <option value="{{ f.id }}">{{ f.name }}</option>
@@ -257,7 +259,7 @@
                                                             </div>
                                                             <label class="col-md-2 col-lg-2 col-form-label" for="view_feedback_subject" style="font-weight: 900;">Select Subject : </label>
                                                             <div class="col-md-4 col-lg-4">
-                                                                <select class="custom-select" onclick="check_term()" id="view_feedback_subject" name="view_feedback_subject" style="width: 100%" data-toggle="tooltip" data-placement="left" title="Subject list will be displayed dynamically according to the faculty and term you have chosen.">
+                                                                <select class="custom-select" id="view_feedback_subject" name="view_feedback_subject" style="width: 100%" data-toggle="tooltip" data-placement="left" title="Subject list will be displayed dynamically according to the faculty and term you have chosen.">
                                                                     <option value="-1">Select Subject</option>
                                                                 </select>
                                                             </div>
@@ -364,10 +366,11 @@
         // for modify search click
         $(document).on('click', '#modify_parameters', function (event) {
             event.preventDefault();
-            $(document).find('div#feedback_parameters').css('display', 'block');
-            $(document).find('div#feedback_content').css('display', 'none');
+            $(document).find('div#feedback_parameters').show();
+            $(document).find('div#feedback_content').hide();
+            $(document).find('div#parameters_selected').hide();
             document.getElementById('feedback_parameters_form').reset();
-        })
+        });
 
         // Before selecting Subject it check whether faculty and term has been selected or not.
         function check_term() {
@@ -398,6 +401,7 @@
 
         // To load subjects dynamically according to faculty and term chosen.
         function update_subjects() {
+            check_term();
             var fac_id = $(document).find('select#view_feedback_faculty option:selected').val();
             var term = $(document).find('select#view_feedback_term option:selected').val();
             var sub_html = '<option value="-1" selected disabled>Select Subject</option>';
@@ -417,6 +421,14 @@
             }
             $(document).find('select#view_feedback_subject').html(sub_html);
         }
+
+        $(document).on('change', 'select#view_feedback_faculty', function () {
+            update_subjects();
+        });
+
+        $(document).on('change', 'select#view_feedback_term', function () {
+            update_subjects();
+        });
 
         // This function is for designing pagination for the first time.
         function design_pagination(total) {
@@ -629,8 +641,35 @@
     </script>
 
     <script type="text/javascript">
-        var faculty_select = document.querySelector('#faculty');
-        faculty_select.onchange = function () {
+
+        function check_modal_data() {
+            var term = $(document).find('select#term option:selected').val();
+            var faculty = $(document).find('select#faculty option:selected').val();
+            var error = $(document).find('div#Error_term');
+            if(term == "-1") {
+                $(document).find('select#term').addClass('form-control-danger');
+                error.css('display', 'block');
+                error.html('Select Term');
+            }
+            else {
+                $(document).find('select#term').removeClass('form-control-danger');
+                error.css('display', 'none');
+            }
+
+            if(faculty == "-1") {
+                $(document).find('select#faculty').addClass('form-control-danger');
+                $(document).find('div#Error_faculty')
+                    .css('display', 'block')
+                    .html('Select Faculty');
+            }
+            else {
+                $(document).find('select#faculty').removeClass('form-control-danger');
+                $(document).find('div#Error_faculty').css('display', 'none')
+            }
+        }
+
+        function load_faculty_modal() {
+            check_modal_data();
             var term = $(document).find('select#term').val();
             var fac_id = $(document).find('select#faculty').val();
             var sub_html = '<option value="-1" selected disabled>Select Subject</option>';
@@ -650,6 +689,9 @@
             }
             $(document).find('select#subject').html(sub_html);
         }
+
+        $(document).on('change', 'select#faculty', load_faculty_modal);
+        $(document).on('change', 'select#term', load_faculty_modal);
     </script>
 
 </body>
